C2LC-289: Reviewed all controls to ensure they don't "jump" on focus.

--- a/src/AudioFeedbackToggleSwitch.scss
+++ b/src/AudioFeedbackToggleSwitch.scss
@@ -5,7 +5,7 @@
 
     &:focus {
         box-shadow: 0 0 0 $c2lc-focus-indicator-width black;
-        padding: 0.1rem;
+        padding: 0.2em;
     }
 
     .ToggleSwitch__switch-inner-circle {
